HTML fixes after using HTML checker

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -17,5 +17,6 @@
   "Phone number": "Phone number",
   "Message": "Message",
   "SEO-Friendly Web Developer & Graphic Designer | Fast, Responsive Websites": "SEO-Friendly Web Developer & Graphic Designer | Fast, Responsive Websites",
-  "I'm a web developer and graphic designer based in the Netherlands. I specialize in creating fast, responsive websites and web applications.": "I'm a web developer and graphic designer based in the Netherlands. I specialize in creating fast, responsive websites and web applications."
+  "I'm a web developer and graphic designer based in the Netherlands. I specialize in creating fast, responsive websites and web applications.": "I'm a web developer and graphic designer based in the Netherlands. I specialize in creating fast, responsive websites and web applications.",
+  "Language menu": "Language menu"
 }
