--- a/src/i18n/nl.json
+++ b/src/i18n/nl.json
@@ -17,5 +17,6 @@
   "Phone number": "Telefoonnummer",
   "Message": "Bericht",
   "SEO-Friendly Web Developer & Graphic Designer | Fast, Responsive Websites": "SEO-vriendelijke webdeveloper & grafische ontwerper | Snelle, responsieve websites",
-  "I'm a web developer and graphic designer based in the Netherlands. I specialize in creating fast, responsive websites and web applications.": "Ik ben een webdeveloper en grafische ontwerper opgezet in het Nederlands. Ik specialiseer in het maken van snelle, responsieve websites en webapplicaties."
+  "I'm a web developer and graphic designer based in the Netherlands. I specialize in creating fast, responsive websites and web applications.": "Ik ben een webdeveloper en grafische ontwerper opgezet in het Nederlands. Ik specialiseer in het maken van snelle, responsieve websites en webapplicaties.",
+  "Language menu": "Taalmenu"
 }
